--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "google-auth-library": "^7.10.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
+    "nanoid": "^3.1.30",
     "nodemon": "^2.0.13"
   }
 }
