--- a/RemeD/package.json
+++ b/RemeD/package.json
@@ -12,13 +12,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
-    "choc": "0.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.3.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sendbird-uikit": "^2.4.4",
