--- a/RemeD/package.json
+++ b/RemeD/package.json
@@ -21,6 +21,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sendbird": "^3.1.0",
     "sendbird-uikit": "^2.4.4",
     "ui": "^0.2.4",
     "web-vitals": "^1.1.2",
